.gitconfig を Bitbucket 上でオンラインで編集しました。

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
-[url "git@github.com:"]
+[url "ssh://git@github.com:"]
     insteadOf = https://github.com/
     
-[url "git@bitbucket.org:"]
+[url "ssh://git@bitbucket.org:"]
     insteadOf = https://bitbucket.org/
