bitbucket-pipelines.yml を Bitbucket 上でオンラインで編集しました。

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,4 +15,4 @@ pipelines:
           - echo ${PACKAGE_PATH}
           - cd "${PACKAGE_PATH}"
           - go build -v
-          - go test -v
+          - go test -v "${PACKAGE_PATH}/..."
